[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
description = "Database interface macros"
keywords = ["dbi", "database"]
license = "MIT"
name = "dbi-macros"
version = "0.2.1"

[dependencies]
futures = "0.1.25"
mysql_async = "0.15.1"
proc-macro2 = "0.4.23"
quote = "0.6.10"

[dependencies.syn]
features = ["full", "extra-traits"]
version = "0.15.18"

[features]
mysql = []

[lib]
proc-macro = true
