[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
description = "Database interface macros"
keywords = ["dbi", "database"]
license = "MIT"
name = "dbi-macros"
version = "0.3.0"
repository = "https://github.com/kardeiz/dbi"
readme = "README.md"

[dependencies]
proc-macro2 = "0.4.23"
quote = "0.6.10"

[dependencies.syn]
features = ["full", "extra-traits"]
version = "0.15.18"

[features]
mysql = []

[lib]
proc-macro = true
