[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
name = "dbi"
version = "0.2.3"
description = "Database interface tools"
keywords = ["dbi", "database"]
license = "MIT"
readme = "../README.md"

[dependencies]
futures = "0.1.25"
mysql_async = "0.15.1"
tokio = "0.1.11"

[dependencies.dbi-macros]
path = "../dbi-macros"
version = "0.2.3"

[features]
default = ["mysql"]
mysql = ["dbi-macros/mysql"]
