[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
name = "dbi"
version = "0.2.4"
description = "Database interface tools"
keywords = ["dbi", "database"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/kardeiz/dbi"

[dependencies]
futures = "0.1.25"
mysql_async = "0.15.1"
tokio = "0.1.11"

[dependencies.dbi-macros]
path = "../dbi-macros"
version = "0.2.4"

[features]
default = ["mysql"]
mysql = ["dbi-macros/mysql"]
